# oldp

./: .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  local.env  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: api.md  conf.py  django.md  docker.md  getting-started.md  index.rst  processing.md  production.md  sitemap-xml.md
docs/api/: api-overview.md  case-creation.md  court-creation.md  law-creation.md  lawbook-creation.md  me-endpoints.md
docs/performance/: performance-beyond-django.md  performance-profiling-2026-02-22.md  performance.md
oldp/: __init__.py  settings.py  urls.py
oldp/api/: me_views.py  mixins.py  permissions.py  throttling.py  urls.py  views.py
oldp/api/tests/: test_me_api.py  test_throttling.py  test_views.py
oldp/apps/accounts/: adapters.py  admin.py  api_views.py  authentication.py  models.py  permissions.py  urls.py  views.py
oldp/apps/accounts/migrations/: 0001_initial.py  0002_apitokenpermission_apitokenpermissiongroup_and_more.py  0003_create_default_permissions.py  0004_apitoken_rate_limit.py
oldp/apps/accounts/tests/: test_admin.py  test_authentication.py  test_me_api.py  test_models.py  test_multitoken_views.py  test_permissions.py  test_views.py
oldp/apps/annotations/: api_views.py
oldp/apps/annotations/migrations/: 0005_alter_annotationlabel_id_alter_caseannotation_id_and_more.py
oldp/apps/annotations/tests/: test_models.py
oldp/apps/cases/: admin.py  admin_views.py  api_views.py  exceptions.py  filters.py  models.py  search_indexes.py  serializers.py  urls.py  views.py
oldp/apps/cases/migrations/: 0022_case_created_by_token.py  0023_alter_case_following_cases_alter_case_id_and_more.py  0024_add_performance_indexes.py  0025_review_status.py
oldp/apps/cases/services/: __init__.py  case_creator.py  court_resolver.py
oldp/apps/cases/tests/: test_admin_dashboard.py  test_api_review_status.py  test_case_creation_api.py  test_processing_steps.py
oldp/apps/courts/: admin.py  admin_views.py  exceptions.py  filters.py  models.py  serializers.py  urls.py  views.py
oldp/apps/courts/migrations/: 0018_alter_city_id_alter_country_id_alter_court_id_and_more.py  0019_court_created_by_token_court_created_date_and_more.py
oldp/apps/courts/services/: __init__.py  court_creator.py
oldp/apps/courts/tests/: test_admin_dashboard.py  test_api_review_status.py  test_court_creation_api.py  test_processing_steps.py
oldp/apps/homepage/: views.py
oldp/apps/laws/: admin.py  admin_views.py  api_views.py  exceptions.py  models.py  search_indexes.py  serializers.py  sitemaps.py  urls.py  views.py
oldp/apps/laws/migrations/: 0019_add_revision_constraints_and_validation.py  0020_add_created_by_token.py  0021_add_performance_indexes.py  0022_lawbook_created_date_lawbook_updated_date.py  0023_review_status.py
oldp/apps/laws/processing/: law_processor.py
oldp/apps/laws/services/: __init__.py  law_creator.py  lawbook_creator.py
oldp/apps/laws/tests/: test_admin_dashboard.py  test_api_review_status.py  test_law_creation_api.py  test_revisions.py
oldp/apps/lib/: context_processors.py  views.py  widgets.py
oldp/apps/lib/tests/: test_filters.py  test_markers.py  test_widgets.py
oldp/apps/processing/: admin_views.py
oldp/apps/processing/tests/: test_content_processor.py
oldp/apps/references/: models.py
oldp/apps/references/migrations/: 0010_alter_casereferencemarker_id_and_more.py  0011_add_performance_indexes.py
oldp/apps/references/tests/: test_models.py  test_reference_methods.py
oldp/apps/search/: api.py  exceptions.py  mock_backend.py  search_backend.py  views.py
oldp/apps/search/templatetags/: search.py
oldp/apps/search/tests/: test_search.py  test_search_filter.py  test_views.py
oldp/apps/search/v1/: filters.py  utils.py  views.py
oldp/apps/sources/: views.py
oldp/apps/sources/migrations/: 0002_alter_source_id.py
oldp/apps/topics/migrations/: 0003_alter_topic_id.py
oldp/assets/static/js/: main.js
oldp/assets/static/scss/: style.scss
oldp/assets/templates/: footer.html  layout.html  pagination_list_view.html  robots.txt
oldp/assets/templates/account/: base.html
oldp/utils/: cache_per_user.py  test_utils.py  version.py
oldp/utils/tests/: __init__.py  test_cache_per_user.py  test_limited_paginator.py  test_profiling.py  test_utils.py
(+57 files in other folders)
